tests/ui/macros/metavar-expressions/concat-raw-identifiers.stderr
error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:28:22
   |
LL |         let ${concat(r#abc, abc)}: () = ();
   |                      ^^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:32:27
   |
LL |         let ${concat(abc, r#abc)}: () = ();
   |                           ^^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:35:22
   |
LL |         let ${concat(r#abc, r#abc)}: () = ();
   |                      ^^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:64:16
   |
LL |     idents_01!(r#_c);
   |                ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:66:16
   |
LL |     idents_10!(r#_c);
   |                ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:68:16
   |
LL |     idents_11!(r#_c, d);
   |                ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:69:20
   |
LL |     idents_11!(_e, r#f);
   |                    ^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:70:16
   |
LL |     idents_11!(r#_g, r#h);
   |                ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:72:13
   |
LL |     tts_01!(r#_c);
   |             ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:74:13
   |
LL |     tts_10!(r#_c);
   |             ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:76:13
   |
LL |     tts_11!(r#_c, d);
   |             ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:77:17
   |
LL |     tts_11!(_e, r#f);
   |                 ^^^
   |
   = note: raw identifiers cannot be concatenated

error: invalid item within a `${concat(..)}` expression
  --> $DIR/concat-raw-identifiers.rs:78:13
   |
LL |     tts_11!(r#_g, r#h);
   |             ^^^^
   |
   = note: raw identifiers cannot be concatenated

error: expected pattern, found `$`
  --> $DIR/concat-raw-identifiers.rs:28:13
   |
LL |         let ${concat(r#abc, abc)}: () = ();
   |             ^ expected pattern
...
LL |     no_params!();
   |     ------------ in this macro invocation
   |
   = note: this error originates in the macro `no_params` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 14 previous errors

